--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -2,3 +2,7 @@
   font-family: Poppins-Regular;
   src: url(../../fonts/Poppins-Regular.ttf);
 }
+@font-face {
+  font-family: Star-Wars;
+  src: url(../../fonts/Starjedi.ttf);
+}
