--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,7 +1,8 @@
 // Colors
 $clrWhite: hsl(0, 0%, 100%);
-$mainPropdoColor: hsl(225, 100%, 14%);
+$clrYellow: hsl(56, 100%, 44%);
 $clrBlack: hsl(0, 0%, 12%);
+$clrSmokeWhite: rgb(243, 243, 243);
 
 //Default background color
 $bgrclr1: $clrBlack;
