Finished basic styling

--- a/src/assets/styles/cmps/_swapichart.scss
+++ b/src/assets/styles/cmps/_swapichart.scss
@@ -1,7 +1,9 @@
 .swapi-chart-wrapper {
   border: none;
-  width: 100%;
+  max-width: 500px;
   height: 600px;
+  margin-left: auto;
+  margin-right: auto;
 
   .bars td {
     width: 150px;
